[package]
name = "hmz"
version = "0.1.2"
edition = "2021"
description = "Personal app and dotfile backup manager"
license = "MIT"
repository = "https://github.com/hamzamohdzubair/hmz"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "5"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
